--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -39,6 +39,7 @@
     .chooseTheme {
       width: 28px;
       height: 28px;
+      cursor: pointer;
       img {
         width: 100%;
         height: 100%;
