--- a/src/components/Today/Today.module.scss
+++ b/src/components/Today/Today.module.scss
@@ -2,8 +2,11 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
-  padding: 50px 20px;
+  padding: 50px 25px;
   border-radius: 20px;
+  background-color: var(--componentbg);
+  box-shadow: 2px 5px 25px -3px var(--boxshadow);
+  transition: var(--transition);
   .blockOne {
     display: flex;
     align-items: center;
@@ -19,7 +22,7 @@
       .today {
         margin-top: -15px;
         font-size: 40px;
-        color: #000;
+        color: var(--textcolor);
       }
     }
     .img {
