--- a/src/components/TodayInfo/TodayInfo.module.scss
+++ b/src/components/TodayInfo/TodayInfo.module.scss
@@ -5,6 +5,10 @@
   padding: 50px 30px;
   border-radius: 20px;
   position: relative;
+  min-width: 750px;
+  background-color: var(--componentbg);
+  box-shadow: 2px 5px 25px -3px var(--boxshadow);
+  transition: var(--transition);
   .wrapper {
     display: flex;
     align-items: center;
@@ -16,6 +20,7 @@
       height: 38px;
       border-radius: 50%;
       padding: 6px;
+      background-color: #fff;
       img {
         width: 100%;
         height: 100%;
@@ -29,7 +34,7 @@
     }
     .info {
       font-size: 14px;
-      color: #000;
+      color: var(--textcolor);
     }
   }
   &::after {
@@ -37,8 +42,8 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 100%;
+    width: 60%;
     height: 100%;
-    background: url(../../assets/cloud-image.svg) center no-repeat;
+    background: url(../../assets/cloud-image.svg) top right/contain no-repeat;
   }
 }
