--- a/src/components/TodayInfo/TodayInfo.module.scss
+++ b/src/components/TodayInfo/TodayInfo.module.scss
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 25px;
   padding: 50px 30px;
   border-radius: 20px;
