--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -48,3 +48,19 @@
     }
   }
 }
+
+@media (max-width: 426px) {
+  .container {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+    position: relative;
+    .choose {
+      .chooseTheme {
+        position: absolute;
+        right: 0;
+        top: 110px;
+      }
+    }
+  }
+}
