--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,9 @@
 html[data-theme="dark"] {
   --componentbg: #4f4f4f;
   --textcolor: #fff;
+  --selectbg: #4f4f4f;
+  --selectoptionbg1: #4f4f4f;
+  --selectoptionbg2: #999;
   --tabbg: #4f4f4f;
   --tabitembg: #2e3035;
   --boxshadow: #b4b4b440;
@@ -12,6 +15,9 @@ html[data-theme="dark"] {
 html[data-theme="light"] {
   --componentbg: #fff;
   --textcolor: #000;
+  --selectbg: #4793ff33;
+  --selectoptionbg1: #fff;
+  --selectoptionbg2: #4793ff33;
   --tabbg: #fff;
   --tabitembg: #4793ff33;
   --boxshadow: #b4b4b440;
